kubernetes/apps/network/internal/remote-services/services/calibre-web.yaml
---
# yaml-language-server: $schema=https://raw.githubusercontent.com/yannh/kubernetes-json-schema/refs/heads/master/v1.32.3/service.json
kind: Service
apiVersion: v1
metadata:
  name: remote-internal-calibre-web
  namespace: network
spec:
  ports:
    - port: 8073
      protocol: TCP
      targetPort: 8073
      name: http
  type: ExternalName
  externalName: zeus.nas.home.internal
---
# yaml-language-server: $schema=https://raw.githubusercontent.com/yannh/kubernetes-json-schema/refs/heads/master/v1.32.3/ingress.json
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: remote-internal-calibre-web
  namespace: network
  annotations:
    error-pages.home.arpa/enabled: "true"
    authentik.home.arpa/enabled: "true"
    gethomepage.dev/enabled: "true"
    gethomepage.dev/name: "calibre-web"
    gethomepage.dev/description: "Calibre Web - E-book Library"
    gethomepage.dev/href: "https://calibre-web.${SECRET_DOMAIN}"
    gethomepage.dev/group: "Media Organization"
    gethomepage.dev/icon: "calibre-web.png"
    # gethomepage.dev/widget.type: "calibreweb"
    # gethomepage.dev/widget.url: "http://calibre-web.${SECRET_DOMAIN}"
    # gethomepage.dev/widget.username:
    # gethomepage.dev/widget.password:
    gethomepage.dev/siteMonitor: http://zeus.nas.home.internal:8073
spec:
  ingressClassName: internal
  rules:
    - host: "calibre-web.${SECRET_DOMAIN}"
      http:
        paths:
        - path: /
          pathType: Prefix
          backend:
            service:
              name: remote-internal-calibre-web
              port:
                number: 8073
  tls:
    - hosts:
        - "calibre-web.${SECRET_DOMAIN}"
      secretName: "${SECRET_DOMAIN/./-}-production-tls"
